# Scholar-MCP

./: .env.example  .gitignore  LICENSE  README.md  api.py  extractor.py  models.py  pyproject.toml  requirements.txt  server.json  server.py  test_run.py
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
scripts/: validate_manifest.py
tests/: test_openalex.py  test_scopus.py  test_unpaywall.py
