[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-academic-mcp"
version = "1.0.0"
description = "Model Context Protocol (MCP) server for deep academic research (Scopus, OpenAlex, Unpaywall)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "mlintangmz", email = "lintangmaulanazulfan@gmail.com" }
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.1",
    "PyMuPDF>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "respx>=0.21.0"
]

[project.scripts]
scholar-mcp = "server:mcp.run"

[tool.setuptools]
py-modules = ["server", "api", "extractor", "models"]
